# ravage

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  bacon.toml  diesel.toml  docker-compose.yml  dump.rdb  package.json  pnpm-lock.yaml  shell.nix  start.sh  tailwind.config.js
.cargo/: config.toml
.github/workflows/: main.yml
docker/: Caddyfile  default.conf  supervisord.conf
migrations/2025-03-06-082500_init_db/: down.sql  up.sql
migrations/2025-06-03-083950_user/: up.sql
src/: app_state.rs  conn.rs  embed.rs  main.rs  schema.rs
src/middleware/: check_login.rs  mod.rs  refresh.rs
src/models/: collection.rs  collection_header.rs  header.rs  load_test.rs  mod.rs  request.rs  request_header.rs  user.rs
src/pages/: error_404.rs  index.rs  loadtests.rs  login.rs  mod.rs  ping.rs  test.rs
src/pages/api/: mod.rs
src/pages/auth/: callback.rs  google.rs  login.rs  logout.rs  mod.rs
src/services/: get_collection.rs  get_loadtest.rs  get_main_collection.rs  get_request.rs  goose_closure.rs  gooses.rs  loadtest_services.rs  mod.rs  reqwest.rs
src/utils/: custom_transaction.rs  mod.rs  monitor_logs.rs  session.rs  tera_context.rs
templates/: 404.html
templates/base/: base.html  base_app.html  navbar.html
templates/components/: aside.html  collection.html  collection_list.html  collection_option.html  form_body.html  form_header.html  histories.html  load_test.html  main_tab.html  request_form.html  request_history.html
templates/pages/: index.html  login.html  test.html
templates/styles/: app.css
(+71 files in other folders)
