[package]
name = "ravage"
version = "0.1.0-alpha"
edition = "2024"

[dependencies]
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
actix-web = "4"
tera = "1"
rust-embed = { version = "8.6.0", features = [
  "compression",
  "include-exclude",
] }
diesel = { version = "2.2.0", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
  "r2d2",
] }
dotenvy = "0.15.7"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
