[package]
name = "ravage"
version = "0.1.0-alpha"
edition = "2024"

[dependencies]
futures = "0.3"
futures-util = { version = "0.3.31" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
actix-web = "4"
actix-ws = { version = "0.3.0" }
tera = "1"
rust-embed = { version = "8.6.0", features = [
  "compression",
  "include-exclude",
] }
diesel = { version = "2.2.0", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
  "r2d2",
  "chrono",
] }
dotenvy = "0.15.7"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
chrono = { version = "0.4.40", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
env_logger = { version = "0.11.6", default-features = false }
goose = { version = "0.18.0" }
html-escape = { version = "0.2.13", default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
rand = { version = "0.9.0" }
